--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Display content of src/frontend/app.js
       run: cat src/frontend/app.js
     - name: Setup Node.js environment
-      uses: actions/setup-node@v3.6.0
+    - uses: actions/setup-node@v3.6.0
       with:
         node-version: '14'
     - run: npm-install
