--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,9 @@ jobs:
       uses: actions/checkout@v2
     - name: Display content of src/frontend/app.js
       run: cat src/frontend/app.js
-    
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+    - run: npm install
+    - run: npm test
+
