--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Display content of src/frontend/app.js
       run: cat src/frontend/app.js
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-    - run: npm install
-    - run: npm test
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3.6.0
+
 
