--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,8 @@ jobs:
       run: cat src/frontend/app.js
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.6.0
-
+      with:
+        node-version: 16
+    - run: npm ci
+    - run: npm test
 
