--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,6 @@ jobs:
       uses: actions/setup-node@v3.6.0
       with:
         node-version: 16
-    - run: node src/frontend/app.js
-    - name: Create new folder dist and copy app.js into dist
-    - run: |
-        mkdir dist
-        cp src/frontend/app.js dist/
+    - name: run app
+      run: node src/frontend/app.js
 
