--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Uebung 1
+name: Frontend Workflow "Build and run"
 on:
   push:
     branches:
@@ -20,10 +20,10 @@ jobs:
         node-version: 16
     - name: run app
       run: node src/frontend/app.js
-    - name: make new dir + copy .js into dir + add comment line in app.js + display change
+    - name: make new dir + copy .js into dir + add comment line in app.js + display change + run app in dist
       run: |
         mkdir dist
         cp src/frontend/app.js dist/
         sed -i '1i //' dist/app.js
         cat dist/app.js
-
+        node dist/app.js
