--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,29 @@
-name: Frontend Workflow "Build and run"
+name: Frontend/Backend Workflow "Build and run"
 on:
   push:
     branches:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Run a command
-      run: echo "Changes were made to the repository"
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Display content of src/frontend/app.js
-      run: cat src/frontend/app.js
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.6.0
-      with:
-        node-version: 16
-    - name: run app
-      run: node src/frontend/app.js
-    - name: make new dir + copy .js into dir + add comment line in app.js + display change + run app in dist
-      run: |
-        mkdir dist
-        cp src/frontend/app.js dist/
-        sed -i '1i //' dist/app.js
-        cat dist/app.js
-        node dist/app.js
+  Frontend:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Run a command
+        run: echo "Changes were made to the repository"
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Display content of src/frontend/app.js
+        run: cat src/frontend/app.js
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: 16
+      - name: run app
+        run: node src/frontend/app.js
+      - name: make new dir + copy .js into dir + add comment line in app.js + display change + run app in dist
+        run: |
+          mkdir dist
+          cp src/frontend/app.js dist/
+          sed -i '1i //' dist/app.js
+          cat dist/app.js
+          node dist/app.js
