--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,4 +12,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: create new folder dist and copy run.py in dist + insert comment line with build date + run.py in dist
+        run: |
+          mkdir dist
+          cp src/backend/run.py dist/
+          sed -i '1i # ' dist/run.py
+          python run.py
+          
         
