--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           mkdir dist
           cp src/backend/run.py dist/
-          sed -i '1i # (date+ '%H:%M:%S')' dist/run.py
+          sed -i '1i # $(date+ '%H:%M:%S')' dist/run.py
       - name: show python file
         run: cat dist/run.py
           
