--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,12 +12,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: create new folder dist and copy run.py in dist + insert comment line with build date + run.py in dist
+      - name: create new folder dist and copy run.py in dist + insert comment line with build date
         run: |
           mkdir dist
           cp src/backend/run.py dist/
           sed -i '1i # $(date+ '%H:%M:%S')' dist/run.py
       - name: show python file
         run: cat dist/run.py
-          
+      - name: run python file
+        run: python disty/run.py
         
