--- a/.github/workflows/Build-and-run.yml
+++ b/.github/workflows/Build-and-run.yml
@@ -50,3 +50,41 @@ jobs:
         with:
           name: dist
           path: dist
+  bundle:
+    name: "create bundle and upload"
+    runs-on: ubuntu-latest
+    needs: [Frontend, Backend]
+    steps:
+      - name: create dir
+        run: mkdir dist
+      - name: Download Frontend
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend
+          path: dist/frontend
+      - name: Download Backend
+        uses: actions/download-artifact@v2
+        with:
+          name: Backend
+          path: dist/Backend
+      - name: create bundle
+        run: |
+          echo "Bundle create at" $(date) > creation.txt
+          rm -f ../bundle.zip
+          zip -r ../bundle.zip ./*
+        working-directory: dist/
+      - name: checkout code
+        uses: actions/checkout@v2
+        with:
+          path: repo/
+      - name: move bundle
+        run: mv bundle.zip repo/
+      - name: upload to repo
+        run: |
+          git config --global user.name 'jenujenujenu'
+          git add bundle.zip
+          git commit -m 'Add bundle for commit ${{github.sha}}'
+        working-directory: repo/
+          
+      
+          
