--- a/.github/workflows/Build-and-run.yml
+++ b/.github/workflows/Build-and-run.yml
@@ -27,6 +27,11 @@ jobs:
           sed echo '// Built at' $(date) | cat - src/frontend/app.js > dist/app.js
           cat dist/app.js
           node dist/app.js
+      - name: Upload Frontend
+        uses: actions/upload-artifact@v2
+        with:
+          name: frontend
+          path: dist
   Backend:
       runs-on: ubuntu-latest
       steps:
@@ -45,10 +50,10 @@ jobs:
         run: cat dist/run.py
       - name: run python file
         run: python dist/run.py
-      - name: Upload artifact
+      - name: Upload Backend
         uses: actions/upload-artifact@v2
         with:
-          name: dist
+          name: backend
           path: dist
   bundle:
     name: "create bundle and upload"
@@ -65,8 +70,8 @@ jobs:
       - name: Download Backend
         uses: actions/download-artifact@v2
         with:
-          name: Backend
-          path: dist/Backend
+          name: backend
+          path: dist/backend
       - name: create bundle
         run: |
           echo "Bundle create at" $(date) > creation.txt
